# redmine-mcp

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quick_start.sh
docs/: API_REFERENCE.md  INSTALLATION.md  USAGE_EXAMPLES.md  VERSION_MANAGEMENT.md
docs/issues/: issue_enumeration_alignment.md  issue_redmine_initial_setup.md  issue_rest_api_setup.md  redmine_mcp_fix.md
docs/manuals/: redmine_setup_guide.md
redmine/configs/: .env.example
redmine/docs/: README.md  api.md  setup.md
redmine/scripts/: configure.py  enable_rest_api.py  manual_api_setup.py  setup.sh
src/redmine_mcp/: config.py  redmine_client.py  server.py  validators.py
tests/: README.md
tests/integration/: __init__.py  test_advanced_mcp_tools.py  test_mcp_tools.py  test_new_features.py
tests/scripts/: __init__.py  claude_integration.py  claude_setup.py  debug_connection.py  installation.py  mcp_integration.py  quick_validation.py  test_config_check.py  test_features_mock.py  test_mcp_new_tools.py  test_name_params.py  test_time_logging.py
tests/unit/: __init__.py  test_attachment_text.py  test_category_cache.py  test_config.py  test_issue_snapshot.py  test_redmine_client.py  test_validators.py
